[gd_scene load_steps=4 format=3 uid="uid://bvushvhnluiym"]

[ext_resource type="Texture2D" uid="uid://ye2a4buap36y" path="res://player.png" id="1_x5wcv"]
[ext_resource type="Script" path="res://Player_Script.gd" id="1_xp4oj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uuyau"]
radius = 59.6657

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_xp4oj")

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(37, 0)
rotation = 1.5708
texture = ExtResource("1_x5wcv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uuyau")

[node name="Timer_Shoot" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer_Grenade" type="Timer" parent="."]
one_shot = true

[node name="LaserSpawners" type="Node2D" parent="."]

[node name="LaserSpawner0" type="Marker2D" parent="LaserSpawners"]
position = Vector2(134, 19)

[node name="LaserSpawner1" type="Marker2D" parent="LaserSpawners"]
position = Vector2(128, 12)

[node name="LaserSpawner2" type="Marker2D" parent="LaserSpawners"]
position = Vector2(128, 28)

[connection signal="timeout" from="Timer_Shoot" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer_Grenade" to="." method="_on_timer_grenade_timeout"]
